// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/kustomize/extract extractPackageFile() extracts from digest 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": "11",
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": 11,
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-dependency-specification",
    },
    Object {
      "currentValue": 2641143766,
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-value",
    },
  ],
}
`;

exports[`manager/kustomize/extract extractPackageFile() extracts from newTag 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": undefined,
      "currentValue": "11",
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "11",
    },
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": "11",
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "11@sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    Object {
      "currentValue": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-value",
    },
  ],
}
`;

exports[`manager/kustomize/extract extractPackageFile() extracts http dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "user/repo",
    "depType": "Kustomization",
  },
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Kustomization",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts multiple image lines 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
    "lookupName": "https://moredhel/remote-kustomize.git",
  },
  Object {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
    "lookupName": "https://moredhel/remote-kustomize.git",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts newName 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": "11",
      "datasource": "docker",
      "depName": "awesome/postgres",
      "depType": "Kustomization",
      "replaceString": "awesome/postgres:11@sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    Object {
      "currentDigest": undefined,
      "currentValue": "11",
      "datasource": "docker",
      "depName": "awesome/postgres",
      "depType": "Kustomization",
      "replaceString": "awesome/postgres:11",
    },
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "awesome/postgres",
      "depType": "Kustomization",
      "replaceString": "awesome/postgres@sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
  ],
}
`;

exports[`manager/kustomize/extract extractPackageFile() extracts ssh dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts ssh dependency with a subdir 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "datasource": "github-tags",
    "depName": "kubernetes-sigs/kustomize",
    "depType": "Kustomization",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() parses helmChart field 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "3.1.3",
      "datasource": "helm",
      "depName": "minecraft",
      "depType": "HelmChart",
      "registryUrls": Array [
        "https://itzg.github.io/minecraft-server-charts",
      ],
    },
  ],
}
`;

exports[`manager/kustomize/extract extractPackageFile() should extract bases resources and components from their respective blocks 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
  },
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Kustomization",
  },
  Object {
    "currentValue": "1.18.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Kustomization",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() should extract dependencies when kind is Component 1`] = `
Array [
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Component",
  },
  Object {
    "currentValue": "1.18.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Component",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.1.0",
    "datasource": "docker",
    "depName": "node",
    "depType": "Component",
    "replaceString": "v0.1.0",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() should extract out image versions 1`] = `
Array [
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.1.0",
    "datasource": "docker",
    "depName": "node",
    "depType": "Kustomization",
    "replaceString": "v0.1.0",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.1",
    "datasource": "docker",
    "depName": "group/instance",
    "depType": "Kustomization",
    "replaceString": "v0.0.1",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.2",
    "datasource": "docker",
    "depName": "quay.io/test/repo",
    "depType": "Kustomization",
    "replaceString": "v0.0.2",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.3",
    "datasource": "docker",
    "depName": "gitlab.com/org/suborg/image",
    "depType": "Kustomization",
    "replaceString": "v0.0.3",
  },
  Object {
    "currentDigest": undefined,
    "currentValue": "v0.0.4",
    "datasource": "docker",
    "depName": "but.this.lives.on.local/private-registry",
    "depType": "Kustomization",
    "replaceString": "v0.0.4",
  },
  Object {
    "currentValue": 2.5,
    "depName": "nginx",
    "depType": "Kustomization",
    "skipReason": "invalid-value",
  },
]
`;
